syntax = "proto3";

package event;
import "google/protobuf/timestamp.proto";
option go_package = "protobuf/golang/eventpb";

enum EventName {
  EVENT_NAME_UNSPECIFIED = 0;

  PULL_REQUEST_CLOSED = 1;
  PULL_REQUEST_REVIEW_SUBMITTED = 2;
  ISSUE_OPENED = 3;
}

message Event {
  string id = 1;
  EventName event_name = 2;
  google.protobuf.Timestamp time = 3;
  oneof payload {
    PullRequestClosedPayload pr_closed_payload = 100;
    PullRequestReviewSubmittedPayload pr_review_payload = 101;
    IssueOpenedPayload issue_opened_payload = 102;
  }
}

message PullRequestClosedPayload {
  string user_id = 1;
  string project_id = 2;
  bool merged = 3;
  int32 additions = 4;
  int32 deletions = 5;
}

message PullRequestReviewSubmittedPayload {
  string user_id = 1;
  string project_id = 2;
  string state = 3; // "approved", "changes_requested", "commented"
}

message IssueOpenedPayload {
  string user_id = 1;
  string project_id = 2;
}
